--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,266 @@
 /* ------------------------------- Coloque sua estilização aqui ------------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+body{
+    background-color: var(--primary-color-2);
+    color: var(--secondary-color-3);
+}
+
+.header_container{
+    width: 100vw;
+    height: 65px;
+
+    background-color: var(--primary-color-1);
+    color: var(--secondary-color-3);
+    border-bottom: 2px solid var(--brand-color-1);
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 200px;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+.header_logo {
+    font: var(--font-text-2);
+}
+
+header button{
+    width: 300px;
+    height: 40px;
+    
+
+    font: var(--font-text-3);
+    background-color: var(--primary-color-1);
+    color: var(--secondary-color-3);
+    border: 1px solid var(--secondary-color-3);
+
+    cursor: pointer;
+}
+
+.deal-container{
+    height: 70vh;
+
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+    gap: 30px
+}
+
+.deal-title{
+    font: var(--font-title-2);
+    
+}
+.deal-title span{
+    color: var(--brand-color-1);
+}
+
+.deal-subtitle{
+    width: 65vw;
+    font: var(--font-text-3);
+    color: var(--secondary-color-1);
+    align-self: center;
+
+}
+
+.deal-about{
+    padding: 5px 10px;
+    background-color: var(--brand-color-1);
+    border: 1px solid var(--brand-color-1);
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: var(--brand-color-2);
+    border: 1px solid var(--brand-color-2);
+}
+
+.about-container{
+    height: 200px;
+
+    background-color: var(--primary-color-1);
+    display: flex;
+}
+
+.about-title{
+    width: 50vw;
+    font: var(--font-title-3);
+    text-align: center;
+    align-self: center;
+}
+
+.about-text{
+    width: 50vw;
+    text-align: center;
+    align-self: center;
+    font: var(--font-text-3);
+}
+
+.questions_container{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.questions_container div{
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.questions_container h2{
+    font: var(--font-title-3);
+}
+.questions_container p{
+    font: var(--font-text-3);
+    color: var(--secondary-color-1);
+}
+
+.btn_span{
+    width: 160px;
+    padding: 10px 5px;
+    background-color: var(--brand-color-1);
+    border: 1px solid var(--brand-color-1);
+
+    font: var(--font-text-6);
+    text-align: center;
+}
+.questions_list span{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.questions_list h3{
+    font: var(--font-title-3);
+    
+}
+
+.questions_list p {
+    font: var(--font-text-4);
+}
+
+.testimony{
+    padding-top: 30px;
+}
+
+.testimony, .testimony_container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
+}
+
+.testimony_ul{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: space-evenly;
+}
+
+.testimony_li{
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    
+}
+.testimony_container h3{
+    font: var(--font-title-3);
+}
+
+.testimony_container p{
+    font: var(--font-text-4);
+    
+}
+
+.testimony_container span{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.testimony_right{
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    
+    align-items: center;
+    width: 50vw;
+}
+
+.testimony_right_div{
+    background-color: var(--brand-color-1);
+    width: 300px;
+    height: 300px;
+    padding: 25px;
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.testimony_right h2{
+    text-align: center;
+    font: var(--font-text-1);
+}
+.testimony_right p{
+    font: var(--font-text-4);
+}
+
+
+
+
+
+/* footer */
+footer{
+    width: 100vw;
+    height:60px;
+    margin-top: 5px;
+    
+    background-color: var(--primary-color-1);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+footer h3{
+    font: var(--font-text-2);
+}
+
+.modal__controller, .modal__container{
+    width: 500px;
+    height: 400px;
+    background-color: var(--primary-color-2);
+    color: var(--sencondary-color-3);
+}
+
+.modal__container{
+    display: flex;
+    flex-direction: column;
+}
+
+.modal__header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal__close{
+    width: 30px;
+    height: 30px;
+    align-self: flex-end;
+    background-color: var(--primary-color-1);
+    color: var(--primary-color-3);
+    font: var(--font-text-2);
+    border: 0;
+    text-align: center;
+    border-radius: 4px;
+}
