--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,9 +4,12 @@
 body{
     background-color: var(--primary-color-2);
     color: var(--secondary-color-3);
+    max-width: 100vw;
 }
 
-.header_container{
+
+
+.header__container{
     width: 100vw;
     height: 65px;
 
@@ -22,8 +25,10 @@ body{
     position: fixed;
     top: 0;
     right: 0;
+
+    
 }
-.header_logo {
+.header__logo {
     font: var(--font-text-2);
 }
 
@@ -40,8 +45,9 @@ header button{
     cursor: pointer;
 }
 
-.deal-container{
+.deal__container{
     height: 70vh;
+    
 
     display: flex;
     flex-direction: column;
@@ -51,15 +57,15 @@ header button{
     gap: 30px
 }
 
-.deal-title{
+.deal__title{
     font: var(--font-title-2);
     
 }
-.deal-title span{
+.deal__title span{
     color: var(--brand-color-1);
 }
 
-.deal-subtitle{
+.deal__subtitle{
     width: 65vw;
     font: var(--font-text-3);
     color: var(--secondary-color-1);
@@ -67,7 +73,7 @@ header button{
 
 }
 
-.deal-about{
+.deal__about{
     padding: 5px 10px;
     background-color: var(--brand-color-1);
     border: 1px solid var(--brand-color-1);
@@ -79,44 +85,44 @@ header button{
     border: 1px solid var(--brand-color-2);
 }
 
-.about-container{
+.about__container{
     height: 200px;
-
+    
     background-color: var(--primary-color-1);
     display: flex;
 }
 
-.about-title{
+.about__title{
     width: 50vw;
     font: var(--font-title-3);
     text-align: center;
     align-self: center;
 }
 
-.about-text{
+.about__text{
     width: 50vw;
     text-align: center;
     align-self: center;
     font: var(--font-text-3);
 }
 
-.questions_container{
+.questions__container{
     margin-top: 30px;
     display: flex;
     justify-content: space-evenly;
 }
 
-.questions_container div{
+.questions__container div{
     width: 40vw;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.questions_container h2{
+.questions__container h2{
     font: var(--font-title-3);
 }
-.questions_container p{
+.questions__container p{
     font: var(--font-text-3);
     color: var(--secondary-color-1);
 }
@@ -130,18 +136,18 @@ header button{
     font: var(--font-text-6);
     text-align: center;
 }
-.questions_list span{
+.questions__list span{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.questions_list h3{
+.questions__list h3{
     font: var(--font-title-3);
     
 }
 
-.questions_list p {
+.questions__list p {
     font: var(--font-text-4);
 }
 
@@ -149,40 +155,40 @@ header button{
     padding-top: 30px;
 }
 
-.testimony, .testimony_container{
+.testimony, .testimony__container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 5px;
 }
 
-.testimony_ul{
+.testimony__ul{
     display: grid;
     grid-template-columns: 1fr;
     justify-content: space-evenly;
 }
 
-.testimony_li{
+.testimony__li{
     display: flex;
     flex-direction: column;
     padding: 30px;
     
 }
-.testimony_container h3{
+.testimony__container h3{
     font: var(--font-title-3);
 }
 
-.testimony_container p{
+.testimony__container p{
     font: var(--font-text-4);
     
 }
 
-.testimony_container span{
+.testimony__container span{
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.testimony_right{
+.testimony__right{
 
     display: flex;
     flex-direction: column;
@@ -193,7 +199,7 @@ header button{
     width: 50vw;
 }
 
-.testimony_right_div{
+.testimony__right_div{
     background-color: var(--brand-color-1);
     width: 300px;
     height: 300px;
@@ -206,11 +212,11 @@ header button{
     
 }
 
-.testimony_right h2{
+.testimony__right h2{
     text-align: center;
     font: var(--font-text-1);
 }
-.testimony_right p{
+.testimony__right p{
     font: var(--font-text-4);
 }
 
@@ -235,32 +241,102 @@ footer{
 footer h3{
     font: var(--font-text-2);
 }
-
-.modal__controller, .modal__container{
-    width: 500px;
-    height: 400px;
-    background-color: var(--primary-color-2);
+.modal__controller{
+    
+    /* width: 505px;
+    height: 405px; */
+    background-color: var(--primary-color-1);
     color: var(--sencondary-color-3);
+    border: 0;
+    padding: 0;
 }
 
 .modal__container{
+    width: 500px;
+    height: 400px;
+    background-color: var(--primary-color-1);
+    color: var(--sencondary-color-3);
+    border: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    border: 2px solid var(--brand-color-1);
+    
 }
+
 
 .modal__header{
     display: flex;
     justify-content: space-between;
+    padding: 20px;
+}
+.modal__header span{
+    font: var(--font-title-3);
 }
 
 .modal__close{
     width: 30px;
     height: 30px;
-    align-self: flex-end;
-    background-color: var(--primary-color-1);
+    align-self: flex-start;
+    background-color: var(--primary-color-2);
     color: var(--primary-color-3);
     font: var(--font-text-2);
     border: 0;
     text-align: center;
     border-radius: 4px;
+    font-weight: bold;
+    text-align: center; 
+    line-height: 0;
+}
+
+.modal__close:hover{
+    background-color: brown;
+}
+
+.modal__container p{
+    
+    padding: 0 20px;
+}
+
+.modal__form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.modal__form button{
+    width: 470px;
+    height: 50px;
+
+    border: 0;
+
+    background-color: var(--brand-color-1);
+    color: var(--secondary-color-3);
+
+    font: var(--font-text-6)
+}
+
+.modal__form input{
+    width: 467px;
+    height: 40px;
+    border: 1px solid var(--primary-color-1);
+    background-color: var(--primary-color-2);
+    padding: 3px;
+
+    font: var(--font-text-5);
+    color: var(--secondary-color-3);
+}
+
+.modal__form input:focus{
+
+    background-color: var(--primary-color-1);
+    padding: 3px;
+    
+    font: var(--font-text-5);
+    color: var(--secondary-color-3);
+    border: 1px solid var(--brand-color-2);
+    outline: none;
 }
